--- a/html/estilos.css
+++ b/html/estilos.css
@@ -1,271 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-image: url('./images/prueba.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 450px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-align: center;
-    position: relative;
-}
-
-nav {
-    text-align: center;
-    background-color: #444;
-    padding: 10px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 20px;
-    padding: 15px;
+.imagenes-landing {
     border-radius: 10px;
+    box-shadow: rgb(161, 161, 161) 5px 5px 5px;
+    width: 500px;
+    height: 350px;
 }
 
-nav a:hover {
-    text-decoration: underline;
-    background-color: #6e6e6e;
-    border-radius: 10px;
+.imagenes-landing:hover {
+    transform: scale(1.05);
+    transition: transform 0.5s;
 }
-
-section {
-    padding: 20px;
-    margin: 10px;
-    margin-top: 0px;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
-
-a {
-    color: cornflowerblue;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 10px;
-    padding: 20px;
-    max-width: 1300px;
-    margin: 0 auto;
-}
-
-h1 {
-    text-align: center;
-}
-
-h3 {
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    background-color: #777777;
-    color: white;
-    border-radius: 10px;
-    margin-bottom: 0;
-}
-
-h4 {
-    text-align: center;
-}
-
-h2{
-    text-align: center;
-
-}
-
-
-
-
-
-
-/************************Clases************************/
-.content {
-    max-width: 1200px;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items:flex-start;
-    justify-content: space-evenly;
-}
-.content section{
-    max-width: 25%;
-}
-
-.content h2 {
-    text-align: center;
-}
-
-.imagen-principal {
-    display: block;
-    margin: 0 auto;
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-}
-
-.texto {
-    border-radius: 10px;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.6);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.texto h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-}
-
-.texto p {
-    font-size: 1.2em;
-    margin-top: 0;
-}
-
-.intro {
-    text-align: justify;
-    margin-top: 0px;
-    font-size: 18px;
-    background-color: #dfdfdf;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.principal {
-    flex: 2;
-    max-width: 65%;
-    background-color: #dfdfdf;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.fotos-dioses {
-    column-count: 2;
-    column-gap: 40px;
-}
-
-.fotos-dioses p {
-    break-inside: avoid;
-    margin-bottom: 10px;
-    background-color: rgb(212, 212, 212);
-    padding: 20px;
-    border-radius: 20px;
-}
-.fotos-dioses .primero{
-    margin-top: 0px;
-}
-
-
-.fotos-dioses p:hover {
-    background-color: rgb(179, 179, 179);
-    transition: background-color 0.5s;
-}
-
-
-.fotos-dioses img {
-    display: block;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    margin: 10px auto;
-    border-radius: 10px;
-}
-
-.fotos-dioses img:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s;
-}
-
-.fotos-criaturas {
-    column-count: 2;
-    column-gap: 40px;
-}
-
-.fotos-criaturas p {
-    break-inside: avoid;
-    margin-bottom: 10px;
-}
-.fotos-criaturas p:hover {
-    background-color: rgb(179, 179, 179);
-    transition: background-color 0.5s;
-}
-.fotos-criaturas img {
-    display: block;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    margin: 10px auto;
-    border-radius: 10px;
-}
-.fotos-criaturas img:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s;
-}
-
-.sidebar {
-    position: sticky;
-    top: 100px;
-    float: right;
-    max-width: 30%;
-    background-color: #dfdfdf;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    align-self: flex-start;
-    height: 100%;
-}
-
-.pie-pagina {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 30px;
-    margin: 0;
-}
-
-.intro2 {
-    text-align: justify;
-}
-
-.contenido{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-.imagenes-grandes {
-    width: 30%;
-    margin: 20px auto;
-    display: block;
-    border-radius: 10px;
-}  
