--- a/html/estilos.css
+++ b/html/estilos.css
@@ -1,3 +1,9 @@
+
+body{
+    padding-bottom: 0;
+}
+
+
 .imagenes-landing {
     border-radius: 10px;
     box-shadow: rgb(161, 161, 161) 5px 5px 5px;
