--- a/html/estilos.css
+++ b/html/estilos.css
@@ -1,5 +1,4 @@
-
-body{
+body {
     padding-bottom: 0;
 }
 
@@ -15,10 +14,63 @@ body{
     transform: scale(1.05);
     transition: transform 0.5s;
 }
+
 .texto-cabecera {
     background-color: #00000085;
     text-align: center;
     width: 35%;
     margin: auto;
-    
+
+}
+
+.flip-card {
+    width: 90%;
+    height: 320px;
+    perspective: 1000px;
+    margin-bottom: 30px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+}
+
+.flip-card-front {
+    background: #f4f4f4;
+    text-align: center;
+}
+
+.flip-card-back {
+    background: #333;
+    color: white;
+    transform: rotateY(180deg);
+    text-align: center;
+    padding: 30px;
+}
+
+.tarjetas {
+    margin: auto;
+    height: 250px;
+    width: 330px;
+    border-radius: 10px;
+}
+
+.cartas {
+    column-count: 3;    
 }
