--- a/html/estilos.css
+++ b/html/estilos.css
@@ -60,8 +60,9 @@ body {
     background: #333;
     color: white;
     transform: rotateY(180deg);
-    text-align: center;
-    padding: 30px;
+    text-align: justify;
+    padding: 17px;
+    font-size: 16px;
 }
 
 .tarjetas {
@@ -72,5 +73,64 @@ body {
 }
 
 .cartas {
-    column-count: 3;    
+    column-count: 3;
+}
+
+.parrafo-dioses {
+    text-align: justify;
+}
+
+.portada {
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 99.4vw;
+    height: 97vh;
+    box-shadow: rgb(161, 161, 161) 5px 5px 5px;
+    margin-bottom: 50px;
+}
+
+.portada-texto {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+
+}
+
+.p-portada {
+    font-size: 0.5em;
+    text-align: justify;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.intro {
+    text-align: justify;
+    font-size: 18px;
+}
+
+#btn-portada {
+    background-color: #00000085;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+#btn-portada:hover {
+    background-color: #000000cc;
+    transition: background-color 0.4s;
 }
